# simplesimplestreams

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  simplesimplestreams.html
.doctrees/: environment.pickle  index.doctree  modules.doctree  simplesimplestreams.doctree
.github/workflows/: gh-pages.yml  python-package.yml  python-publish.yml
_modules/: index.html
_modules/simplesimplestreams/: simplestreams.html
_sources/: index.rst.txt  modules.rst.txt
docs_src/: conf.py  simplesimplestreams.rst
simplesimplestreams/: __init__.py  simplestreams.py
tests/: test_simplesimplestreams.py
