[project]
name = "simplesimplestreams"
version = "0.1.2"
description = "simple simplestreams client"
readme = "README.md"
requires-python = ">=3.9,<4.0"
license = "Apache-2.0"
authors = [
    { name = "otariidae", email = "otariidae@users.noreply.github.com" },
]
dependencies = [
    "requests>=2.26.0,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/otariidae/simplesimplestreams"
Repository = "https://github.com/otariidae/simplesimplestreams"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.25.9"
black = "^21.9b0"
mypy = "^0.910"
pytest = "^6.2.5"
Sphinx = "^4.2.0"
sphinx-rtd-theme = "^1.0.0"
setuptools = ">=68,<81"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
