[project]
name = "simplesimplestreams"
version = "0.1.2"
description = "simple simplestreams client"
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = "Apache-2.0"
authors = [
    { name = "otariidae", email = "otariidae@users.noreply.github.com" },
]
dependencies = [
    "requests>=2.26.0,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/otariidae/simplesimplestreams"
Repository = "https://github.com/otariidae/simplesimplestreams"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.33.0.20260408"
black = "^26.3.1"
mypy = "^1.20.1"
pytest = "^9.0.3"
Sphinx = "<9"
sphinx-rtd-theme = "^3.1.0"
tomli = {version = "<3", markers = "python_version < \"3.11\""}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
